--- a/index.html
+++ b/index.html
@@ -270,6 +270,146 @@
               </div>
             </div>
           </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-Four"
+              >
+                How to pay online?
+              </button>
+            </h2>
+            <div
+              id="question-Four"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Quibusdam voluptatem, aspernatur atque ad voluptas tempora eum
+                rerum maiores officia quia esse sint sapiente tempore in aut
+                libero dolorem unde illum?
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-Five"
+              >
+                How to register online?
+              </button>
+            </h2>
+            <div
+              id="question-Five"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                cumque soluta eveniet exercitationem, minima, ratione, ut nihil
+                praesentium eaque atque quae autem placeat tempora aut
+                architecto. Nostrum assumenda ea reprehenderit.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Instructors -->
+    <section id="instructors" class="p-5 bg-primary">
+      <div class="container">
+        <h2 class="text-center text-light">Our Instructors</h2>
+        <p class="lead text-center text-light mb-5">
+          Our instructors all have 5+ years of experience as a web developer
+          industry
+        </p>
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-3">
+            <div class="bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/men/12.jpg"
+                  class="rounded-circle mb-3"
+                  alt=""
+                />
+                <h3 class="card-title mb-3">Joe Jackson</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolore nulla iste quidem accusamus consequuntur in.
+                </p>
+                <a href="#" class="i bi bi-twitter text-dark mx-1"></a>
+                <a href="#" class="i bi bi-facebook text-dark mx-1"></a>
+                <a href="#" class="i bi bi-linkedin text-dark mx-1"></a>
+                <a href="#" class="i bi bi-instagram text-dark mx-1"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/women/12.jpg"
+                  class="rounded-circle mb-3"
+                  alt=""
+                />
+                <h3 class="card-title mb-3">Alexa Brook</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolore nulla iste quidem accusamus consequuntur in.
+                </p>
+                <a href="#" class="i bi bi-twitter text-dark mx-1"></a>
+                <a href="#" class="i bi bi-facebook text-dark mx-1"></a>
+                <a href="#" class="i bi bi-linkedin text-dark mx-1"></a>
+                <a href="#" class="i bi bi-instagram text-dark mx-1"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/women/60.jpg"
+                  class="rounded-circle mb-3"
+                  alt=""
+                />
+                <h3 class="card-title mb-3">Julie Heart</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolore nulla iste quidem accusamus consequuntur in.
+                </p>
+                <a href="#" class="i bi bi-twitter text-dark mx-1"></a>
+                <a href="#" class="i bi bi-facebook text-dark mx-1"></a>
+                <a href="#" class="i bi bi-linkedin text-dark mx-1"></a>
+                <a href="#" class="i bi bi-instagram text-dark mx-1"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/men/50.jpg"
+                  class="rounded-circle mb-3"
+                  alt=""
+                />
+                <h3 class="card-title mb-3">James Lee</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolore nulla iste quidem accusamus consequuntur in.
+                </p>
+                <a href="#" class="i bi bi-twitter text-dark mx-1"></a>
+                <a href="#" class="i bi bi-facebook text-dark mx-1"></a>
+                <a href="#" class="i bi bi-linkedin text-dark mx-1"></a>
+                <a href="#" class="i bi bi-instagram text-dark mx-1"></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
