--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <!-- Option 1: Include in HTML -->
     <link
       rel="stylesheet"
@@ -65,8 +69,15 @@
               We focus on teaching our students the fundamentals of the latest
               and greatest technologies to prepare them for their first dev role
             </p>
-            <button class="btn btn-primary btn-lg">Start The Enrollment</button>
+            <button
+              class="btn btn-primary btn-lg"
+              data-bs-toggle="modal"
+              data-bs-target="#enroll"
+            >
+              Start The Enrollment
+            </button>
           </div>
+
           <img
             class="img-fluid w-50 d-none d-sm-block"
             src="/images/ladyonPC.svg"
@@ -75,6 +86,85 @@
         </div>
       </div>
     </section>
+
+    <!-- Registration Modal -->
+
+    <div
+      class="modal fade"
+      id="enroll"
+      tabindex="-1"
+      aria-labelledby="enrollLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="enrollLabel">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>Fill out this form and we will get back to you</p>
+            <form>
+              <div class="mb-3">
+                <label for="first-name" class="form-label">First Name:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="first-name"
+                  placeholder=""
+                />
+              </div>
+              <div class="mb-3">
+                <label for="last-name" class="form-label">Last Name:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="last-name"
+                  placeholder=""
+                />
+              </div>
+              <div class="mb-3">
+                <label for="email-address" class="form-label"
+                  >Email Address:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="email-address"
+                  placeholder=""
+                />
+              </div>
+              <div class="mb-3">
+                <label for="phone-number" class="form-label"
+                  >Phone Number:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="phone-number"
+                  placeholder=""
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Newsletter -->
 
@@ -413,10 +503,60 @@
         </div>
       </div>
     </section>
+    <!-- Contact info and Map -->
+    <section>
+      <div class="container">
+        <div class="row p-5">
+          <div class="col-md">
+            <h2 class="text-center pb-4">Contact info</h2>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <span class="fw-bold"> Main Location:</span> 50 Main st Boston
+                MA
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Phone:</span> (555) 555-555
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Student Phone:</span> (333) 333-555
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enroll Email:</span> enrollfrontend.edu
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Student Email:</span>studentfrontend.edu
+              </li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <div id="map"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="bg-dark p-5 text-white text-center position-relative">
+      <div class="container">
+        <p class="lead">Copyrigth &copy; 2022 Front End Bootstrap 5</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+          <i class="bi bi-arrow-up-circle h1"></i>
+        </a>
+      </div>
+    </footer>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script>
+      mapboxgl.accessToken =
+        "pk.eyJ1IjoiY2hlemVyc2Ftb250ZSIsImEiOiJjbDE5NjQ1ZmUwazBoM2JteHlyMWFnd3RqIn0.NAsD26V2LeIG_C85l6a3ag";
+      var map = new mapboxgl.Map({
+        container: "map",
+        style: "mapbox://styles/mapbox/streets-v11",
+        center: [-71.060982, 42.35725],
+        zoom: 18,
+      });
+    </script>
   </body>
 </html>
