--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
           <img
             class="img-fluid w-50 d-none d-sm-block"
-            src="/images/ladyonPC.svg"
+            src="images/ladyonPC.svg"
             alt=""
           />
         </div>
@@ -243,7 +243,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-md pb-5">
-            <img src="/images/fundamentals.svg" class="img-fluid" alt="" />
+            <img src="images/fundamentals.svg" class="img-fluid" alt="" />
           </div>
           <div class="col-md">
             <h2>Learn Fundamentals</h2>
@@ -281,7 +281,7 @@
             <a href="#" class="btn btn-light">Learn More&rarr;</a>
           </div>
           <div class="col-md pt-5">
-            <img src="/images/react.svg" class="img-fluid" alt="" />
+            <img src="images/react.svg" class="img-fluid" alt="" />
           </div>
         </div>
       </div>
